force-app/main/default/objects/Chronarpay_Login_History__c/Chronarpay_Login_History__c.object-meta.xml
<CustomObject>
    <label>Chronarpay Login History</label>
    <nameField>
        <displayFormat>CLH-{0000000000}</displayFormat>
        <label>Chronarpay Login History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chronarpay Login Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>