force-app/main/default/objects/Chronarpay_Login_History__c/fields/Chronarpay_User__c.field-meta.xml
<CustomField>
    <fullName>Chronarpay_User__c</fullName>
    <label>Chronarpay User</label>
    <referenceTo>Chronarpay_User__c</referenceTo>
    <relationshipLabel>Chronarpay Login Histories</relationshipLabel>
    <relationshipName>Chronarpay_Login_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>