force-app/main/default/objects/Chronarpay_Login_History__c/fields/Login_Status_Action__c.field-meta.xml
<CustomField>
    <fullName>Login_Status_Action__c</fullName>
    <label>Login Status Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login Success</fullName>
            </value>
            <value>
                <fullName>Login Failed</fullName>
            </value>
            <value>
                <fullName>Password Changed</fullName>
            </value>
            <value>
                <fullName>Reset Password</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>